--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,7 @@
-<div class="mat-display-4">Display 4</div>
-<div class="mat-display-3">Display 3</div>
-<div class="mat-display-2">Display 2</div>
-<div class="mat-display-1">Display 1</div>
 
-<div class="mat-headline">Heading h1</div>
-<div class="mat-title">Heading h2</div>
-<div class="mat-subheading-2">Heading h3</div>
-<div class="mat-subheading-1">Heading h4</div>
-
-<div class="mat-body-1">Body Text</div>
-<div class="mat-body-2">Bold Body Text</div>
-<div class="mat-caption">Caption Text</div>
-
-<div class="mat-typography">
-  <h1>H1</h1>
-  <h2>H2</h2>
-  <h3>H3</h3>
-  <h4>H4</h4>
+<div>
+  <button mat-button>Click me!</button>
+  <button mat-raised-button>Click me!</button>
+  <button mat-flat-button>Click me!</button>
+  <button mat-stroked-button>Click me!</button>
 </div>
