--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,10 @@
   <button mat-flat-button>Click me!</button>
   <button mat-stroked-button>Click me!</button>
 </div>
+
+
+<div>
+  <button mat-icon-button>Icon</button>
+  <button mat-fab>Fab</button>
+  <button mat-mini-fab>MiniFab</button>
+</div>
