--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,4 @@
-
 <div>
-  <button mat-button>Click me!</button>
-  <button mat-raised-button>Click me!</button>
-  <button mat-flat-button>Click me!</button>
-  <button mat-stroked-button>Click me!</button>
-</div>
-
-
-<div>
-  <button mat-icon-button>Icon</button>
-  <button mat-fab>Fab</button>
-  <button mat-mini-fab>MiniFab</button>
+  <mat-button-toggle #toggleBtn>Toggle!</mat-button-toggle>
+  {{toggleBtn.checked}}
 </div>
